tests/snapshots/cli_help__cli_help_bookmark_list.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
List bookmarks (newest first), or one item's bookmarks in position order

Usage: spotuify bookmark list [OPTIONS]

Options:
      --log-format <LOG_FORMAT>  Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT` [possible values: text, json]
      --uri <URI>                Only bookmarks on this media URI
      --current                  Only bookmarks on the currently playing item
      --no-daemon-start          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing
  -o, --set <key.path=value>     Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged
      --provider <PROVIDER>
      --format <FORMAT>          [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help                     Print help
